--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -2,6 +2,42 @@
 
 本文介绍如何通过修改 Primary Zone，达到租户扩容的功能。
 
+## 前提条件
+
+调整 Primary Zone 前，需要开启租户内的数据均衡。租户内的数据均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的数据均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
+
+开启租户内的数据均衡的语句如下：
+
+* 系统租户开启指定租户内的数据均衡
+
+   ```sql
+   ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant_name';
+   ```
+
+   该语句仅将用户租户下配置项 `enable_rebalance` 的值设置为 `true`。
+
+   示例：
+
+   ```sql
+   ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
+   ```
+  
+* 系统租户开启租户间的数据均衡，同时开启所有租户内的数据均衡
+
+   ```sql
+   ALTER SYSTEM SET enable_rebalance = true TENANT = ALL;
+   ```
+
+   该语句表示系统租户下和用户租户下配置项 `enable_rebalance` 的值均为 `true`。
+
+* 用户租户开启本租户内的数据均衡
+
+   ```sql
+   ALTER SYSTEM SET enable_rebalance = true;
+   ```
+
+更多配置项 enable_rebalance 的详细说明，请参见 [enable_rebalance](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)。
+
 ## 增加 Primary Zone
 
 1. 使用 root 用户登录到集群的 sys 租户。
@@ -111,3 +147,5 @@
    ```
 
 通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 1 变更为 2。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而对应的日志流个数变更为 4。变更后租户的服务节点从 2 扩容为 4，从而实现了租户扩容。
+
+## 减少 Primary Zone
