--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -2,13 +2,45 @@
 
 租户扩容和缩容本质上是提高和降低租户的服务能力，包括计算能力和存储容量。可以通过提高单节点的服务能力达成，也可以通过增加服务节点达成。本文介绍如何通过修改 Unit Number，从而增加或减少服务节点，达到租户总服务能力的提升或降低，实现租户的扩容或缩容。
 
-## 使用限制
-
-当前版本暂不支持调小 Unit Number。
-
 ## 前提条件
 
 在进行租户的扩容和缩容操作前，需要进行以下操作：
+
+* 开启租户内的数据均衡，实现分区在服务节点上的均衡。
+
+  租户内的数据均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的数据均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
+
+  开启租户内的数据均衡的语句如下：
+
+  * 系统租户开启指定租户内的数据均衡
+
+     ```sql
+     ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant_name';
+     ```
+
+     该语句仅将用户租户下配置项 `enable_rebalance` 的值设置为 `true`。
+
+     示例：
+
+     ```sql
+     ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
+     ```
+  
+  * 系统租户开启租户间的数据均衡，同时开启所有租户内的数据均衡
+
+     ```sql
+     ALTER SYSTEM SET enable_rebalance = true TENANT = ALL;
+     ```
+
+     该语句表示系统租户下和用户租户下配置项 `enable_rebalance` 的值均为 `true`。
+
+  * 用户租户开启本租户内的数据均衡
+
+    ```sql
+    ALTER SYSTEM SET enable_rebalance = true;
+    ```
+
+  更多配置项 enable_rebalance 的详细说明，请参见 [enable_rebalance](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)。
 
 * 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
 
@@ -22,9 +54,9 @@
 
   查看集群节点的资源总量和分配状态的相关操作，参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
-## 操作步骤
+## 调大 Unit Number
 
-下面以调整租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
+下面以调大租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
@@ -115,6 +147,10 @@
    ```
 
 通过上述示例，将租户 `mq_t1` 的 Unit Number 从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 1，对应的日志流个数为 1；变更后租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2，从而实现了租户扩容。
+
+## 调小 Unit Number
+
+下面以调小租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
 
 ## 相关文档
 
