--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.bootstrap.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.bootstrap.md
@@ -48,5 +48,5 @@ ip_port:
 指定 Root Service 机器列表并启动集群。列表包含多台 OBServer 节点则需要以逗号（,）分隔。
 
 ```shell
-obclient> ALTER SYSTEM BOOTSTRAP REGION 'hangzhou' ZONE 'zone1' SERVER 'xxx.xxx.xx.xx1:xxxx', ZONE 'zone2' SERVER 'xxx.xxx.xx.xx2:xxxx', ZONE 'zone3' SERVER 'xxx.xxx.xx.xx3:xxxx';
+obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER 'xxx.xxx.xx.xx1:xxxx', ZONE 'zone2' SERVER 'xxx.xxx.xx.xx2:xxxx', ZONE 'zone3' SERVER 'xxx.xxx.xx.xx3:xxxx';
 ```
