--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -118,13 +118,26 @@
    [admin@test001 bin]$ source ~/.oceanbase-all-in-one/bin/env.sh
    ```
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>您可通过执行 <code>which obd</code> 和 <code>which obclient</code> 命令检测是否安装成功，如果可以找到 <code>.oceanbase-all-in-one</code> 目录下的 obd 和 obclient 路径，则表示安装成功。</p>
+</main>
+
 ### 步骤二：配置 OBD
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>本文以 OBD V2.1.1 为例提供操作指导。不同 OBD 版本的配置文件可能不同，请以实际配置文件为准。更多 OBD 相关内容请参见 <a href="https://www.oceanbase.com/docs/obd-cn">OBD 文档</a>。</p>
+</main>
 
 如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包，all-in-one 安装包提供的组件已经经过相互适配测试，为官方推荐版本。
 
 如果对部署所需组件版本有特别要求，可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 自行下载组件对应版本安装包，复制到中控机任一目录，在该目录下参考以下步骤配置 OBD。
 
-如果是在线部署 OceanBase 集群或通过 all-in-one 安装包部署 OceanBase 集群，则跳过步骤 1~3。
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>如果是在线部署 OceanBase 集群或通过 all-in-one 安装包部署 OceanBase 集群，则跳过步骤 1~3。</p>
+</main>
 
 1. 禁用远程仓库
 
@@ -238,6 +251,8 @@
           memory_limit: 64G # The maximum running memory for an observer
           system_memory: 30G # The reserved system memory. system_memory is reserved for general tenants.
           datafile_size: 192G # Size of the data file. 
+          datafile_next: 200G
+          datafile_maxsize: 1T
           log_disk_size: 192G # The size of disk space used by the clog files.
           enable_syslog_wf: false # Print system logs whose levels are higher than WARNING to a separate log file. The default value is true.
           enable_syslog_recycle: true # Enable auto system log recycling or not. The default value is false.
@@ -256,6 +271,7 @@
           # The directory for clog, ilog, and slog. The default value is the same as the data_dir value.
           redo_dir: /redo
           root_password: ****** # root user password, can be empty
+          proxyro_password: ******** # proxyro user pasword, consistent with obproxy's observer_sys_password, can be empty
         server1:
           zone: zone1
         server2:
@@ -283,7 +299,9 @@
       | devname  | 可选      | 无        | 和 `servers` 里指定的 IP 对应的网卡，通过 `ip addr` 命令可以查看 IP 和网卡对应关系。 |
       | memory_limit  | 可选      | 0       | observer 进程能从环境中获取的最大内存，未配置的情况下以 `memory_limit_percentage` 配置项为准，配置项详细介绍请参考 [memory_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md) 和 [memory_limit_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/137.memory_limit_percentage.md)。 |
       | system_memory  | 可选      | 0M        | 保留的系统内存，该参数值会占用 `memory_limit` 的内存，未配置的情况下 OceanBase 数据库会自适应。 |
-      | datafile_size  | 可选      | 0        | 指定对应节点数据文件（block_file）大小，未配置的情况下以 `datafile_disk_percentage` 配置项为准，详细介绍请参考 [datafile_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/54.datafile_size.md) 和 [datafile_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/53.datafile_disk_percentage.md)。 |
+      | datafile_size  | 可选      | 0        | 指定对应节点数据文件（block_file）大小，未配置的情况下以 `datafile_disk_percentage` 配置项为准，详细介绍请参见 [datafile_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/54.datafile_size.md) 和 [datafile_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/53.datafile_disk_percentage.md)。 |
+      | datafile_next  | 可选  | 0       | 控制磁盘空间的增长步长，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见（链接待放）。 |
+      | datafile_maxsize  | 可选  | 0      | 限制磁盘空间的最大可用上限，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见（链接待放）。 |
       | log_disk_size  | 可选      | 0        | 用于设置 Redo 日志磁盘的大小，未配置的情况下以`log_disk_percentage` 配置项为准，详细介绍请参考 [log_disk_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/237.log_disk_size.md) 和 [log_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/238.log_disk_percentage.md)。 |
       | enable_syslog_wf  | 可选      | true      | 设置是否把 WARN 以上级别的系统日志打印到一个单独的日志文件中。 |
       | enable_syslog_recycle  | 可选      | false        | 指定是否自动回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
@@ -369,7 +387,7 @@
       | home_path  | 必选       | 无       | 组件的安装路径，建议在普通用户 admin 下。 |
       | memory_size  | 必选     | 无      | OCP Express 服务器的内存容量，推荐算法为：memory_size = 512MB +（期望的节点数 * 期望的租户数）* 60MB，期望的租户数需要包含 sys 和 ocp meta 租户本身。 |
       | logging_file_total_size_cap  | 必选       | 1GB        | 日志文件总大小，默认为 1GB。<blockquote>**注意**：</br>该参数的单位需使用 GB 或 MB，若使用 G 或 M 单位会报错，无法成功部署 OCP Express。</blockquote> |
-      | admin_passwd  | 必选      | 无        | OCP 登录页面的 admin 账户密码，密码长度 8~32 位，至少包含 2 位数字、2 位大写字母、2 位小写字母和 2 位特殊字符（~!@#%^&*_-+=\|(){}[]:;,.?/）。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
+      | admin_passwd  | 必选      | 无        | OCP Express 登录页面的 admin 账户密码，密码长度 8~32 位，至少包含 2 位数字、2 位大写字母、2 位小写字母和 2 位特殊字符（~!@#%^&*_-+=\|(){}[]:;,.?/）。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
 
 ### 步骤三：部署 OceanBase 集群
 
@@ -381,7 +399,7 @@
 1. 部署 OceanBase 集群
 
    ```shell
-   [admin@test001 ~]$ obd cluster deploy obtest -c all-components.yaml
+   [admin@test001 ~]$ obd cluster deploy obtest -c default-components.yaml
    ```
 
    联网情况下，在您执行了 `obd cluster deploy` 命令之后，OBD 将检查您的目标机器是否有部署所需安装包。如果没有安装包，OBD 将自动从 YUM 源获取。
@@ -493,4 +511,12 @@ obd cluster destroy obtest
    ```shell
    [admin@test001 bin]$ vim ~/.bash_profile
    # 删除该文件中的 source /home/admin/.oceanbase-all-in-one/bin/env.sh
+   ```
+
+3. 使修改生效
+
+   删除环境变量后，您需重新登录终端，或者执行 source 命令使修改生效，可参考如下命令。
+
+   ```shell
+   [admin@test001 ~]$ source ~/.bash_profile
    ```
