--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -300,8 +300,8 @@
       | memory_limit  | 可选      | 0       | observer 进程能从环境中获取的最大内存，未配置的情况下以 `memory_limit_percentage` 配置项为准，配置项详细介绍请参考 [memory_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md) 和 [memory_limit_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/137.memory_limit_percentage.md)。 |
       | system_memory  | 可选      | 0M        | 保留的系统内存，该参数值会占用 `memory_limit` 的内存，未配置的情况下 OceanBase 数据库会自适应。 |
       | datafile_size  | 可选      | 0        | 指定对应节点数据文件（block_file）大小，未配置的情况下以 `datafile_disk_percentage` 配置项为准，详细介绍请参见 [datafile_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/54.datafile_size.md) 和 [datafile_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/53.datafile_disk_percentage.md)。 |
-      | datafile_next  | 可选  | 0       | 控制磁盘空间的增长步长，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见（链接待放）。 |
-      | datafile_maxsize  | 可选  | 0      | 限制磁盘空间的最大可用上限，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见（链接待放）。 |
+      | datafile_next  | 可选  | 0       | 控制磁盘空间的增长步长，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见 [配置磁盘数据文件的动态扩容](../../../7.reference/2.administrator-guide/2.basic-database-management/10.disk-data-file-management/1.disk-data-file-dynamic-expansion.md)。 |
+      | datafile_maxsize  | 可选  | 0      | 限制磁盘空间的最大可用上限，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见 [配置磁盘数据文件的动态扩容](../../../7.reference/2.administrator-guide/2.basic-database-management/10.disk-data-file-management/1.disk-data-file-dynamic-expansion.md)。 |
       | log_disk_size  | 可选      | 0        | 用于设置 Redo 日志磁盘的大小，未配置的情况下以`log_disk_percentage` 配置项为准，详细介绍请参考 [log_disk_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/237.log_disk_size.md) 和 [log_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/238.log_disk_percentage.md)。 |
       | enable_syslog_wf  | 可选      | true      | 设置是否把 WARN 以上级别的系统日志打印到一个单独的日志文件中。 |
       | enable_syslog_recycle  | 可选      | false        | 指定是否自动回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
