--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
@@ -10,7 +10,7 @@ ALTER RESOURCE TENANT
 -----------------------
 
 ```sql
-ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num; 
+ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num [ DELETE UNIT_GROUP = ( id_list ) ]; 
 ```
 
 参数解释
@@ -19,7 +19,8 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num;
 |  **参数**   |   **描述**   |
 |-----------|------------|
 | tenant_name | 修改配置的租户名称。 |
-| UNIT_NUM [=] unit_num |修改租户下所有资源池的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 节点个数。 |
+| unit_num |修改租户下所有资源池的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 节点个数。 |
+| DELETE UNIT_GROUP | 仅用于缩容场景，删除指定的 Unit Group。`id_list` 如果未指定该关键字，则随机删除一个 Unit Group。 |
 
 示例
 -----------------------
@@ -30,3 +31,4 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num;
 obclient> ALTER RESOURCE TENANT tenant1 UNIT_NUM = 3;
 Query OK, 0 rows affected 
 ```
+
