--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
@@ -20,7 +20,7 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num [ DELETE UNIT_GROUP = ( 
 |-----------|------------|
 | tenant_name | 修改配置的租户名称。 |
 | unit_num |修改租户下所有资源池的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 节点个数。 |
-| DELETE UNIT_GROUP | 仅用于缩容场景，删除指定的 Unit Group。`id_list` 如果未指定该关键字，则随机删除一个 Unit Group。 |
+| DELETE UNIT_GROUP | 仅用于缩容场景，删除 `id_list` 指定的 Unit Group。如果未指定该关键字，则随机删除一个 Unit Group。 |
 
 示例
 -----------------------
