420：Add union documents and single table query examples

--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md
@@ -49,28 +49,23 @@ column_list：
 
 现有一个学生信息表 `student`，包括以下字段：学生编号（id）、学生姓名（name）、性别（gender）、年龄（age）、成绩（score）、入学日期（enrollment_date），其中性别字段用数字 0 和 1 表示女和男。
 
-```shell
-CREATE TABLE student (
-  id INT PRIMARY KEY AUTO_INCREMENT,
-  name VARCHAR(20) NOT NULL,
-  gender TINYINT NOT NULL,
-  age INT NOT NULL,
-  score FLOAT NOT NULL,
-  enrollment_date DATE NOT NULL
-);
+数据如下：
 
-INSERT INTO student (name, gender, age, score, enrollment_date)
-VALUES
-('Emma', 0, 20, 85.0, '2021-09-01'),
-('William', 1, 21, 90.5, '2021-09-02'),
-('Olivia', 0, 22, 95.5, '2021-09-03'),
-('James', 1, 23, 87.5, '2021-09-04'),
-('Sophia', 0, 24, 91.5, '2021-09-05'),
-('Benjamin', 1, 25, 96.5, '2021-09-06'),
-('Ava', 0, 26, 89.5, '2021-09-07'),
-('Michael', 1, 27, 93.5, '2021-09-08'),
-('Charlotte', 1, 28, 88.0, '2021-09-09'),
-('Ethan', 1, 29, 92.0, '2021-09-10')
+```shell
++----+-----------+--------+-----+-------+-----------------+
+| id | name      | gender | age | score | enrollment_date |
++----+-----------+--------+-----+-------+-----------------+
+|  1 | Emma      |      0 |  20 |    85 | 2021-09-01      |
+|  2 | William   |      1 |  21 |  90.5 | 2021-09-02      |
+|  3 | Olivia    |      0 |  19 |  95.5 | 2021-09-03      |
+|  4 | James     |      1 |  20 |  87.5 | 2021-09-03      |
+|  5 | Sophia    |      0 |  20 |  91.5 | 2021-09-05      |
+|  6 | Benjamin  |      1 |  21 |  96.5 | 2021-09-01      |
+|  7 | Ava       |      0 |  22 |  89.5 | 2021-09-06      |
+|  8 | Michael   |      1 |  18 |  93.5 | 2021-09-08      |
+|  9 | Charlotte |      1 |  19 |    88 | 2021-09-06      |
+| 10 | Ethan     |      1 |  20 |    92 | 2021-09-01      |
++----+-----------+--------+-----+-------+-----------------+
 ```
 
 ### SELECT 基础查询
@@ -86,27 +81,67 @@ VALUES
   <p>虽然使用 <code>*</code> 可以快速列出所有字段，但是使用手动列出所有字段在查询性能、代码的可读性和可维护性方面会更好。</p>
 </main>
 
-示例 1：查询表 `student` 全部列的数据。
+示例 1：使用下面的 SQL 语句，查询表 `student` 中所有行的数据，并返回每行的 `id`、`name`、`gender`、`age`、`score` 和 `enrollment_date` 列的数据。
+
+```sql
+SELECT id,name,gender,age,score,enrollment_date FROM student;
+```
+
+返回结果如下：
 
 ```shell
-SELECT id,name,gender,age,score,enrollment_date FROM student;
++----+-----------+--------+-----+-------+-----------------+
+| id | name      | gender | age | score | enrollment_date |
++----+-----------+--------+-----+-------+-----------------+
+|  1 | Emma      |      0 |  20 |    85 | 2021-09-01      |
+|  2 | William   |      1 |  21 |  90.5 | 2021-09-02      |
+|  3 | Olivia    |      0 |  19 |  95.5 | 2021-09-03      |
+|  4 | James     |      1 |  20 |  87.5 | 2021-09-03      |
+|  5 | Sophia    |      0 |  20 |  91.5 | 2021-09-05      |
+|  6 | Benjamin  |      1 |  21 |  96.5 | 2021-09-01      |
+|  7 | Ava       |      0 |  22 |  89.5 | 2021-09-06      |
+|  8 | Michael   |      1 |  18 |  93.5 | 2021-09-08      |
+|  9 | Charlotte |      1 |  19 |    88 | 2021-09-06      |
+| 10 | Ethan     |      1 |  20 |    92 | 2021-09-01      |
++----+-----------+--------+-----+-------+-----------------+
+10 rows in set
 ```
 
 #### 查询指定列
 
 在表中根据列名查找指定列数据。
 
-示例 2：查询表 `student` 中的 `id` 和 `name` 列。
+示例 2：使用下面的 SQL 语句，查询表 `student` 中所有行的数据，返回每行的 `id` 和 `name` 列的数据。
 
 ```sql
 SELECT id,name FROM student;
+```
+
+返回结果如下：
+
+```shell
++----+-----------+
+| id | name      |
++----+-----------+
+|  1 | Emma      |
+|  2 | William   |
+|  3 | Olivia    |
+|  4 | James     |
+|  5 | Sophia    |
+|  6 | Benjamin  |
+|  7 | Ava       |
+|  8 | Michael   |
+|  9 | Charlotte |
+| 10 | Ethan     |
++----+-----------+
+10 rows in set
 ```
 
 #### 查询经过计算的值
 
 在查询中可以对指定列进行数据处理。
 
-示例 3：将查询的 `age` 列的值加 `1` 再输出。
+示例 3：使用下面的 SQL 语句，查询表 `student` 中所有行的 `id`、`name` 和 `age` 列的数据，并将每行的 `age` 列的值加 `1`。返回结果将包含 `id`、`name` 和 `age+1` 三列。
 
 ```sql
 SELECT id,name,age+1 FROM student;
@@ -139,18 +174,48 @@ SELECT id,name,age+1 FROM student;
 
 * 等于（`=`）：查询出指定列中和目标值相等的数据。如果值是字符串类型，需要用单引号或者双引号括起来。
 
-    示例 4：在 `student` 表中查询 `gender` 等于 `1` 的 `id`,`name`,`gender` 列数据。
+    示例 4：使用下面的 SQL 语句，查询表 `student` 中 `gender` 列等于 `1` 的所有行，并返回这些行中的 `id`、`name` 和 `gender` 列的数据。
 
     ```sql
     SELECT id,name,gender FROM student WHERE gender = 1;
     ```
 
+    返回结果如下：
+
+    ```shell
+    +----+-----------+--------+
+    | id | name      | gender |
+    +----+-----------+--------+
+    |  2 | William   |      1 |
+    |  4 | James     |      1 |
+    |  6 | Benjamin  |      1 |
+    |  8 | Michael   |      1 |
+    |  9 | Charlotte |      1 |
+    | 10 | Ethan     |      1 |
+    +----+-----------+--------+
+    6 rows in set
+    ```
+
 * 不等于（`<>` 和 `!=`）：不等于包括 `<>` 和 `!=` 两种写法。
 
-    示例 5：在 `student` 表中查询 `gender` 不等于 `1` 的 `id`,`name`,`gender` 列数据。
+    示例 5：使用下面的 SQL 语句，查询表 `student` 中 `gender` 列不等于 `1` 的所有行，并返回这些行中的 `id`、`name` 和 `gender` 列的数据。
 
     ```sql
     SELECT id,name,gender FROM student WHERE gender <> 1;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+--------+--------+
+    | id | name   | gender |
+    +----+--------+--------+
+    |  1 | Emma   |      0 |
+    |  3 | Olivia |      0 |
+    |  5 | Sophia |      0 |
+    |  7 | Ava    |      0 |
+    +----+--------+--------+
+    4 rows in set
     ```
 
 * 大于（`>`）和小于（`<`）：大于（`>`）和小于（`<`）将数值按照大小比较。如果比较的是字符，则按照 ASCII 码对应的值进行比较，比较时按照字符对应的位置逐一进行比较。
@@ -160,10 +225,24 @@ SELECT id,name,age+1 FROM student;
     <p>大于等于（\>=）和小于等于（\<=）与之类似。 </p>
     </main>
 
-    示例 6：在 `student` 表中查询 `score` 小于等于 `90` 的数据。
+    示例 6：使用下面的 SQL 语句，查询表 `student` 中 `score` 列小于 `90` 的所有行，并返回这些行中的 `id`、`name` 和 `score` 列的数据。
 
     ```sql
     SELECT id,name,score FROM student WHERE score < 90;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+
+    | id | name      | score |
+    +----+-----------+-------+
+    |  1 | Emma      |    85 |
+    |  4 | James     |  87.5 |
+    |  7 | Ava       |  89.5 |
+    |  9 | Charlotte |    88 |
+    +----+-----------+-------+
+    4 rows in set
     ```
 
 #### 逻辑条件查询
@@ -172,18 +251,48 @@ SELECT id,name,age+1 FROM student;
 
 * 并且（`AND`）：返回同时满足 `AND` 两个条件的数据。
 
-    示例 7：在 `student` 表中查询 `gender` 等于 `1` 且`score` 小于等于 `90` 的数据。
+    示例 7：使用下面的 SQL 语句，查询表 `student` 中 `gender` 等于 `1` 且 `score` 小于等于 `90` 的所有行，并返回这些行中的 `id`、`name`、`gender` 和 `score` 列的数据。
 
     ```sql
-    SELECT id,name,gender,score FROM student WHERE gender = 1 AND score <=90;
+    SELECT id,name,gender,score FROM student WHERE gender = 1 AND score <= 90;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+--------+-------+
+    | id | name      | gender | score |
+    +----+-----------+--------+-------+
+    |  4 | James     |      1 |  87.5 |
+    |  9 | Charlotte |      1 |    88 |
+    +----+-----------+--------+-------+
+    2 rows in set
     ```
 
 * 或者（OR）：只要满足其中一个条件的数据都会被返回。
 
-    示例 8：在 `student` 表中查询 `gender` 等于 `1` 或 `score` 小于 `90` 的数据。
+    示例 8：使用下面的 SQL 语句，查询表 `student` 中 `gender` 等于 `1` 或 `score` 小于 `90` 的所有行，并返回这些行中的 `id`、`name`、`gender` 和 `score` 列的数据。
 
     ```sql
     SELECT id,name,gender,score FROM student WHERE gender = 1 OR score < 90;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+--------+-------+
+    | id | name      | gender | score |
+    +----+-----------+--------+-------+
+    |  1 | Emma      |      0 |    85 |
+    |  2 | William   |      1 |  90.5 |
+    |  4 | James     |      1 |  87.5 |
+    |  6 | Benjamin  |      1 |  96.5 |
+    |  7 | Ava       |      0 |  89.5 |
+    |  8 | Michael   |      1 |  93.5 |
+    |  9 | Charlotte |      1 |    88 |
+    | 10 | Ethan     |      1 |    92 |
+    +----+-----------+--------+-------+
+    8 rows in set
     ```
 
 #### 模糊查询（LIKE）
@@ -201,10 +310,23 @@ SELECT id,name,age+1 FROM student;
   <p>当数据库字集为 ASCII 时一个汉字需要两个 <code>_</code>；当字符集为 GBK 时只需要一个 <code>_</code>。</p>
 </main>
 
-示例 9：在 `student` 表中查询字段 `name` 包含 `am` 的数据。
+示例 9：使用下面的 SQL 语句，查询表 `student` 中 `name` 包含 `am` 的所有行，并返回这些行中的 `id` 和 `name` 列的数据。
 
 ```sql
 SELECT id,name FROM student WHERE name LIKE '%am%';
+```
+
+返回结果如下：
+
+```shell
++----+----------+
+| id | name     |
++----+----------+
+|  2 | William  |
+|  4 | James    |
+|  6 | Benjamin |
++----+----------+
+3 rows in set
 ```
 
 #### 区间查询（BETWEEN AND）
@@ -216,10 +338,24 @@ SELECT id,name FROM student WHERE name LIKE '%am%';
   <p>区间查询的两个临界值不要调换位置，只能是大于等于左边的值，并且小于等于右边的值。</p>
 </main>
 
-示例 10：在 `student` 表中查询 `score` 值在 `85 ~ 90` 的数据。
+示例 10：使用下面的 SQL 语句，查询表 `student` 中 `score` 值在 `85 ~ 90` 的所有行，并返回这些行中的 `id`、`name` 和 `score` 列的数据。
 
 ```sql
 SELECT id,name,score FROM student WHERE score BETWEEN 85 AND 90;
+```
+
+返回结果如下：
+
+```shell
++----+-----------+-------+
+| id | name      | score |
++----+-----------+-------+
+|  1 | Emma      |    85 |
+|  4 | James     |  87.5 |
+|  7 | Ava       |  89.5 |
+|  9 | Charlotte |    88 |
++----+-----------+-------+
+4 rows in set
 ```
 
 #### 指定集合查询（IN）
@@ -234,10 +370,24 @@ SELECT id,name,score FROM student WHERE score BETWEEN 85 AND 90;
     </ul>
   </main>
 
-示例 11：在 `student` 表中查询 `id` 满足集合 (1,3,5,7) 的数据。
+示例 11：使用下面的 SQL 语句，查询表 `student` 中 `id` 值满足在集合 `(1, 3, 5, 7)` 的所有行，并返回这些行中的 `id` 和 `name` 列的数据。
 
 ```sql
 SELECT id,name FROM student WHERE id IN (1,3,5,7);
+```
+
+返回结果如下：
+
+```shell
++----+--------+
+| id | name   |
++----+--------+
+|  1 | Emma   |
+|  3 | Olivia |
+|  5 | Sophia |
+|  7 | Ava    |
++----+--------+
+4 rows in set
 ```
 
 #### NULL 值专用查询
@@ -246,18 +396,44 @@ SELECT id,name FROM student WHERE id IN (1,3,5,7);
 
 * `IS NULL`：用于查询指定的列的值为 `NULL` 的数据。
 
-    示例 12：在 `student` 表中查询 `score` 为空的数据。
+    示例 12：使用下面的 SQL 语句，查询表 `student` 中 `score` 为空的所有行，并返回这些行中的 `id`、`name` 和 `score` 列的数据。
 
     ```sql
     SELECT id,name,score FROM student WHERE score IS NULL;
     ```
 
+    返回结果如下：
+
+    ```shell
+    Empty set
+    ```
+
 * `IS NOT NULL`：用于查询指定的列的值为非 `NULL` 的数据。
 
-    示例 13：在 `student` 表中查询 `score` 不为空的数据。
+    示例 13：使用下面的 SQL 语句，查询表 `student` 中 `score` 不为空的所有行，并返回这些行中的 `id`、`name` 和 `score` 列的数据。
 
     ```sql
     SELECT id,name,score FROM student WHERE score IS NOT NULL;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+
+    | id | name      | score |
+    +----+-----------+-------+
+    |  1 | Emma      |    85 |
+    |  2 | William   |  90.5 |
+    |  3 | Olivia    |  95.5 |
+    |  4 | James     |  87.5 |
+    |  5 | Sophia    |  91.5 |
+    |  6 | Benjamin  |  96.5 |
+    |  7 | Ava       |  89.5 |
+    |  8 | Michael   |  93.5 |
+    |  9 | Charlotte |    88 |
+    | 10 | Ethan     |    92 |
+    +----+-----------+-------+
+    10 rows in set
     ```
 
 ### 分组查询
@@ -278,66 +454,95 @@ SELECT id,name FROM student WHERE id IN (1,3,5,7);
 
 #### 分组查询示例
 
-创建示例表 `fruit_order` 并插入适当数据。
+现有示例表 `fruit_order`，数据如下：
 
-```sql
-CREATE TABLE fruit_order(
-  order_id INT NOT NULL AUTO_INCREMENT COMMENT '订单ID',
-  user_id BIGINT NOT NULL COMMENT '客户ID',
-  user_name VARCHAR(16) NOT NULL DEFAULT '' COMMENT '客户名称',
-  fruit_price DECIMAL(10,2) NOT NULL DEFAULT 0 COMMENT '订单金额',
-  order_year SMALLINT NOT NULL COMMENT '下单年份',
-  PRIMARY KEY (order_id)
-) COMMENT '订单表';
-
-INSERT INTO fruit_order(order_id,user_id,user_name,fruit_price,order_year) VALUES
-  (1,1011,'张三',13.11,'2019'),
-  (4,1011,'张三',22.21,'2020'),
-  (6,1011,'张三',58.83,'2020'),
-  (2,1022,'李四',23.34,'2019'),
-  (3,1022,'李四',12.22,'2019'),
-  (7,1022,'李四',14.66,'2021'),
-  (8,1022,'李四',34.44,'2021'),
-  (5,1033,'王五',51.55,'2020'),
-  (9,1033,'王五',63.66,'2021');
+```shell
++----------+---------+-----------+-------------+------------+
+| order_id | user_id | user_name | fruit_price | order_year |
++----------+---------+-----------+-------------+------------+
+|        1 |    1011 | A1        |       13.11 |       2019 |
+|        2 |    1022 | B2        |       23.34 |       2019 |
+|        3 |    1022 | B2        |       12.22 |       2019 |
+|        4 |    1011 | A1        |       22.21 |       2020 |
+|        5 |    1033 | C3        |       51.55 |       2020 |
+|        6 |    1011 | A1        |       58.83 |       2020 |
+|        7 |    1022 | B2        |       14.66 |       2021 |
+|        8 |    1022 | B2        |       34.44 |       2021 |
+|        9 |    1033 | C3        |       63.66 |       2021 |
++----------+---------+-----------+-------------+------------+
 ```
 
 * 单字段分组查询。
 
-    示例 14：查询每个客户下单数量，并输出客户 ID 和下单数量。
+    示例 14：查询每个客户下单数量，并输出 `user_id` 和 `COUNT(order_id)`。
 
     ```sql
-    SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order GROUP BY user_id;
+    SELECT user_id, COUNT(order_id) FROM fruit_order GROUP BY user_id;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +---------+-----------------+
+    | user_id | COUNT(order_id) |
+    +---------+-----------------+
+    |    1011 |               3 |
+    |    1022 |               4 |
+    |    1033 |               2 |
+    +---------+-----------------+
+    3 rows in set
     ```
 
 * 多字段分组查询。
 
-    示例 15：查询每个客户每年下单数量，并输出客户 ID 、下单年份和下单数量。
+    示例 15：查询每个客户每年下单数量，并输出 `user_id`、`order_year` 和 `COUNT(order_id)`。
 
     ```sql
-    SELECT user_id 客户ID, order_year 下单年份, COUNT(order_id) 下单数量 FROM fruit_order GROUP BY user_id,order_year;
+    SELECT user_id,order_year, COUNT(order_id) FROM fruit_order GROUP BY user_id,order_year;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +---------+------------+-----------------+
+    | user_id | order_year | COUNT(order_id) |
+    +---------+------------+-----------------+
+    |    1011 |       2019 |               1 |
+    |    1022 |       2019 |               2 |
+    |    1011 |       2020 |               2 |
+    |    1033 |       2020 |               1 |
+    |    1022 |       2021 |               2 |
+    |    1033 |       2021 |               1 |
+    +---------+------------+-----------------+
+    6 rows in set
     ```
 
 * 分组前筛选。
 
-    示例 16：查询 2020 年每个客户的下单数量，并输出客户 ID 和下单数量。
+    示例 16：查询 2020 年每个客户的下单数量，并输出 `user_id` 和 `COUNT(order_id)`。
 
     ```sql
-    SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order t WHERE t.order_year = 2020 GROUP BY user_id;
+    SELECT user_id, COUNT(order_id) FROM fruit_order t WHERE t.order_year = 2020 GROUP BY user_id;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +---------+-----------------+
+    | user_id | COUNT(order_id) |
+    +---------+-----------------+
+    |    1011 |               2 |
+    |    1033 |               1 |
+    +---------+-----------------+
+    2 rows in set
     ```
 
 * 分组后筛选。
 
-    示例 17：查询 2019 年订单数量大于 1 的客户，并输出客户 ID 和下单数量。
+    示例 17：查询 2019 年订单数量大于 1 的客户，并输出 `user_id` 和 `COUNT(order_id)`。
 
     ```sql
-    SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order t WHERE t.order_year = 2019 GROUP BY user_id HAVING COUNT(order_id)>=2;
-    ```
-
-    等价于：
-
-    ```sql
-    SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order t WHERE t.order_year = 2019 GROUP BY user_id HAVING 下单数量>=2;
+    SELECT user_id, COUNT(order_id) FROM fruit_order t WHERE t.order_year = 2019 GROUP BY user_id HAVING COUNT(order_id)>=2;
     ```
 
     <main id="notice" type='explain'>
@@ -345,17 +550,41 @@ INSERT INTO fruit_order(order_id,user_id,user_name,fruit_price,order_year) VALUE
     <p>当查询中包含 <code>HAVING</code> 时，先获得不含 <code>HAVING</code> 子句时的 SQL 查询结果，然后在这个结果的基础上使用 <code>HAVING</code> 条件筛选出符合的数据，最后返回这些数据。由此，<code>HAVING</code> 后是可以使用聚合函数，并且这个聚集函数不必与 <code>SELECT</code> 后面的聚集函数相同。 </p>
     </main>
 
+    返回结果如下：
+
+    ```shell
+    +---------+-----------------+
+    | user_id | COUNT(order_id) |
+    +---------+-----------------+
+    |    1022 |               2 |
+    +---------+-----------------+
+    1 row in set
+    ```
+
 * 分组后排序。
 
-    示例 18：查询每个客户订单的最大金额，然后按照最大金额倒序输出客户 ID 和最大金额。
+    示例 18：查询每个客户订单的最大金额，然后按照最大金额倒序输出 `user_id` 和 `MAX(fruit_price)`。
 
     ```sql
-    SELECT user_id 客户ID, MAX(fruit_price) 最大金额 FROM fruit_order t GROUP BY user_id ORDER BY 最大金额 DESC;
+    SELECT user_id, MAX(fruit_price) FROM fruit_order t GROUP BY user_id ORDER BY MAX(fruit_price) DESC;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +---------+------------------+
+    | user_id | MAX(fruit_price) |
+    +---------+------------------+
+    |    1033 |            63.66 |
+    |    1011 |            58.83 |
+    |    1022 |            34.44 |
+    +---------+------------------+
+    3 rows in set
     ```
 
 ### 聚合查询
 
-关于聚合查询的详细信息，请参见 [查询中使用聚合函数](待添加)。
+关于聚合查询的详细信息，请参见 [查询中使用聚合函数](3.use-operators-and-functions-in-query-of-mysql-mode/7.use-aggregate-functions-in-queries-of-mysql-mode.md)。
 
 ### 排序查询
 
@@ -377,10 +606,50 @@ INSERT INTO fruit_order(order_id,user_id,user_name,fruit_price,order_year) VALUE
     SELECT id,name,score FROM student ORDER BY score;
     ```
 
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+
+    | id | name      | score |
+    +----+-----------+-------+
+    |  1 | Emma      |    85 |
+    |  4 | James     |  87.5 |
+    |  9 | Charlotte |    88 |
+    |  7 | Ava       |  89.5 |
+    |  2 | William   |  90.5 |
+    |  5 | Sophia    |  91.5 |
+    | 10 | Ethan     |    92 |
+    |  8 | Michael   |  93.5 |
+    |  3 | Olivia    |  95.5 |
+    |  6 | Benjamin  |  96.5 |
+    +----+-----------+-------+
+    10 rows in set
+    ```
+
     示例 20：在 `student` 表中按照 `score` 降序显示学生信息。
 
     ```sql
     SELECT id,name,score FROM student ORDER BY score DESC;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+
+    | id | name      | score |
+    +----+-----------+-------+
+    |  6 | Benjamin  |  96.5 |
+    |  3 | Olivia    |  95.5 |
+    |  8 | Michael   |  93.5 |
+    | 10 | Ethan     |    92 |
+    |  5 | Sophia    |  91.5 |
+    |  2 | William   |  90.5 |
+    |  7 | Ava       |  89.5 |
+    |  9 | Charlotte |    88 |
+    |  4 | James     |  87.5 |
+    |  1 | Emma      |    85 |
+    +----+-----------+-------+
+    10 rows in set
     ```
 
 * 多字段排序查询。
@@ -391,12 +660,52 @@ INSERT INTO fruit_order(order_id,user_id,user_name,fruit_price,order_year) VALUE
     SELECT id,name,score,enrollment_date FROM student ORDER BY score DESC,enrollment_date ASC;
     ```
 
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+-----------------+
+    | id | name      | score | enrollment_date |
+    +----+-----------+-------+-----------------+
+    |  6 | Benjamin  |  96.5 | 2021-09-01      |
+    |  3 | Olivia    |  95.5 | 2021-09-03      |
+    |  8 | Michael   |  93.5 | 2021-09-08      |
+    | 10 | Ethan     |    92 | 2021-09-01      |
+    |  5 | Sophia    |  91.5 | 2021-09-05      |
+    |  2 | William   |  90.5 | 2021-09-02      |
+    |  7 | Ava       |  89.5 | 2021-09-06      |
+    |  9 | Charlotte |    88 | 2021-09-06      |
+    |  4 | James     |  87.5 | 2021-09-03      |
+    |  1 | Emma      |    85 | 2021-09-01      |
+    +----+-----------+-------+-----------------+
+    10 rows in set
+    ```
+
 * 在 `ORDER BY` 中使用了函数排序。
 
     示例 22：在 `student` 表中按照 `score` 降序、`DAY(enrollment_date)` 升序显示学生信息。
 
     ```sql
     SELECT id,name,score,enrollment_date FROM student ORDER BY score DESC,DAY(enrollment_date) ASC;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+-----------------+
+    | id | name      | score | enrollment_date |
+    +----+-----------+-------+-----------------+
+    |  6 | Benjamin  |  96.5 | 2021-09-01      |
+    |  3 | Olivia    |  95.5 | 2021-09-03      |
+    |  8 | Michael   |  93.5 | 2021-09-08      |
+    | 10 | Ethan     |    92 | 2021-09-01      |
+    |  5 | Sophia    |  91.5 | 2021-09-05      |
+    |  2 | William   |  90.5 | 2021-09-02      |
+    |  7 | Ava       |  89.5 | 2021-09-06      |
+    |  9 | Charlotte |    88 | 2021-09-06      |
+    |  4 | James     |  87.5 | 2021-09-03      |
+    |  1 | Emma      |    85 | 2021-09-01      |
+    +----+-----------+-------+-----------------+
+    10 rows in set
     ```
 
 * 在 `WHERE` 子句之后排序。
@@ -407,6 +716,25 @@ INSERT INTO fruit_order(order_id,user_id,user_name,fruit_price,order_year) VALUE
 
     ```sql
     SELECT id,name,score,DAY(enrollment_date) FROM student WHERE score > 85 ORDER BY DAY(enrollment_date) ASC;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+-----------+-------+----------------------+
+    | id | name      | score | DAY(enrollment_date) |
+    +----+-----------+-------+----------------------+
+    |  6 | Benjamin  |  96.5 |                    1 |
+    | 10 | Ethan     |    92 |                    1 |
+    |  2 | William   |  90.5 |                    2 |
+    |  3 | Olivia    |  95.5 |                    3 |
+    |  4 | James     |  87.5 |                    3 |
+    |  5 | Sophia    |  91.5 |                    5 |
+    |  7 | Ava       |  89.5 |                    6 |
+    |  9 | Charlotte |    88 |                    6 |
+    |  8 | Michael   |  93.5 |                    8 |
+    +----+-----------+-------+----------------------+
+    9 rows in set
     ```
 
 ### 限制查询结果数量
@@ -439,6 +767,21 @@ LIMIT [offset,] count_num
     SELECT id,name FROM student LIMIT 5;
     ```
 
+    返回结果如下：
+
+    ```shell
+    +----+---------+
+    | id | name    |
+    +----+---------+
+    |  1 | Emma    |
+    |  2 | William |
+    |  3 | Olivia  |
+    |  4 | James   |
+    |  5 | Sophia  |
+    +----+---------+
+    5 rows in set
+    ```
+
 * 获取跳过 n 行记录后的 m 行记录
 
     <main id="notice" type='explain'>
@@ -452,12 +795,36 @@ LIMIT [offset,] count_num
     SELECT id,name FROM student LIMIT 3,3;
     ```
 
+    返回结果如下：
+
+    ```shell
+    +----+----------+
+    | id | name     |
+    +----+----------+
+    |  4 | James    |
+    |  5 | Sophia   |
+    |  6 | Benjamin |
+    +----+----------+
+    3 rows in set
+    ```
+
 * 获取最大的一条记录。
 
     示例 24：在 `student` 表中如果想获取 `score` 最大的一条记录，可以先按照 `score` 降序，然后取第一条记录。
 
     ```sql
-    SELECT id,name,score FROM ORDER BY score DESC student LIMIT 1;
+    SELECT id,name,score FROM student ORDER BY score DESC LIMIT 1;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +----+----------+-------+
+    | id | name     | score |
+    +----+----------+-------+
+    |  6 | Benjamin |  96.5 |
+    +----+----------+-------+
+    1 row in set
     ```
 
 #### 分页查询
@@ -478,14 +845,58 @@ LIMIT (page_no - 1) * page_size, page_size;
 
 示例 25：在 `student` 表中，每页显示 2 条数据，依次获取第 1 页、第 2 页和第 3 页的数据。
 
+第 1 页：
+
 ```sql
-SELECT id,name FROM ORDER BY id;
+SELECT id,name FROM student ORDER BY id LIMIT 0,2;
+```
 
-SELECT id,name FROM ORDER BY id LIMIT 0,2;
+返回结果如下：
 
-SELECT id,name FROM ORDER BY id LIMIT 2,2;
+```shell
++----+---------+
+| id | name    |
++----+---------+
+|  1 | Emma    |
+|  2 | William |
++----+---------+
+2 rows in set
+```
 
-SELECT id,name FROM ORDER BY id LIMIT 4,2;
+第 2 页：
+
+```sql
+SELECT id,name FROM student ORDER BY id LIMIT 2,2;
+```
+
+返回结果如下：
+
+```shell
++----+--------+
+| id | name   |
++----+--------+
+|  3 | Olivia |
+|  4 | James  |
++----+--------+
+2 rows in set
+```
+
+第 3 页：
+
+```sql
+SELECT id,name FROM student ORDER BY id LIMIT 4,2;
+```
+
+返回结果如下：
+
+```shell
++----+----------+
+| id | name     |
++----+----------+
+|  5 | Sophia   |
+|  6 | Benjamin |
++----+----------+
+2 rows in set
 ```
 
 ## 相关文档
@@ -494,4 +905,4 @@ SELECT id,name FROM ORDER BY id LIMIT 4,2;
 
 * [比较运算符](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/5.comparison-operators-of-mysql-mode.md)
 
-* [查询中使用聚合函数](待添加)
+* [查询中使用聚合函数](3.use-operators-and-functions-in-query-of-mysql-mode/7.use-aggregate-functions-in-queries-of-mysql-mode.md)
