--- a/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md
@@ -752,9 +752,45 @@ obclient> SELECT user_id 客户ID, MAX(fruit_price) 最大金额 FROM fruit_orde
 3 rows in set
 ```
 
+#### 分组汇总
+
+使用 `GROUP BY CUBE` 子句，对 `fruit_order` 表按照 `user_id` 进行分组，并对分组结果进行汇总。
+
+```sql
+SELECT user_id,SUM(FRUIT_PRICE) FROM fruit_order GROUP BY CUBE(user_id);
+```
+
+返回结果如下：
+
+```shell
++---------+------------------+
+| USER_ID | SUM(FRUIT_PRICE) |
++---------+------------------+
+|    NULL |           294.02 |
+|    1011 |            94.15 |
+|    1022 |            84.66 |
+|    1033 |           115.21 |
++---------+------------------+
+4 rows in set
+```
+
+更多分组汇总的信息，请参见 [SIMPLE SELECT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
+
 ## 排序查询
 
 ORDER BY 子句用于对查询结果按照一个或多个属性列进行升序（ASC）或降序（DESC）排列，默认为升序。
+
+查询 2019 年订单数量大于等于 1 的客户，并输出客户 ID 和下单数量。
+
+```sql
+obclient> SELECT user_id,USER_NAME,SUM(FRUIT_PRICE) FROM fruit_order GROUP BY CUBE(user_id,USER_NAME);
++----------+--------------+
+| 客户ID   | 下单数量     |
++----------+--------------+
+|     1011 |            1 |
++----------+--------------+
+1 row in set
+```
 
 ### 单字段排序查询
 
