--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/2.join-algorithm.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/2.join-algorithm.md
@@ -518,3 +518,5 @@ Outputs & filters:
   2 - output([T2.C1], [T2.C2]), filter(nil), 
       access([T2.C1], [T2.C2]), partitions(p0)
 ```
+
+特别地，OceanBase 数据库在 Hash Join 中使用了 Runtime Fiter 优化，详细信息请参见[]。
