--- a/zh-CN/7.reference/4.development-reference/7.ob-partition-calculator/2.use-of-the-ob-partition-calculator.md
+++ b/zh-CN/7.reference/4.development-reference/7.ob-partition-calculator/2.use-of-the-ob-partition-calculator.md
@@ -24,7 +24,7 @@
 <dependency>
     <groupId>com.oceanbase</groupId>
     <artifactId>ob-partition-calculator</artifactId>
-    <version>1.7.0-RELEASE</version>
+    <version>1.8.0-RELEASE</version>
 </dependency>
 ```
 
@@ -65,7 +65,7 @@ public void test() throws Exception {
     // TableEntryKey key = new TableEntryKey(cluster, tenant, database, table, ObServerMode.fromOracle("3.2.3.3"));
     
     TableEntryExtractor tableEntryExtractor = new TableEntryExtractor();
-    TableEntry entry = tableEntryExtractor.queryTableEntry(conn, key);
+    TableEntry entry = tableEntryExtractor.queryTableEntry(conn, key,subsequentV4);
 
     ObPartIdCalculator calculator = new ObPartIdCalculator(entry);
 
@@ -107,13 +107,13 @@ public void test() throws Exception {
     String database = "";
     // 需要查询的表名
     String table = defaultTableName;
-    // Mysql模式
+    // Mysql 模式
     TableEntryKey key = new TableEntryKey(cluster, tenant, database, table, ObServerMode.fromMySql("3.2.3.3"));
-    // Oracle模式
+    // Oracle 模式
     // TableEntryKey key = new TableEntryKey(cluster, tenant, database, table, ObServerMode.fromOracle("3.2.3.3"));
     
     TableEntryExtractor tableEntryExtractor = new TableEntryExtractor();
-    TableEntry entry = tableEntryExtractor.queryTableEntry(conn, key);
+    TableEntry entry = tableEntryExtractor.queryTableEntry(conn, key,subsequentV4);
 
     ObPartIdCalculator calculator = new ObPartIdCalculator(entry);
 
@@ -159,16 +159,13 @@ public void test() throws Exception {
     // 需要查询的表名
     String table = defaultTableName;
 
-    // Mysql 模式
+    // MySQL 模式
     TableEntryKey key = new TableEntryKey(cluster, tenant, database, table, ObServerMode.fromMySql("3.2.3.3"));
     // Oracle 模式
     // TableEntryKey key = new TableEntryKey(cluster, tenant, database, table, ObServerMode.fromOracle("3.2.3.3"));
-    // ob3.x 版本
     TableEntryExtractor tableEntryExtractor = new TableEntryExtractor();
-    // ob4.x 版本
-    // TableEntryExtractorV4 tableEntryExtractor = new TableEntryExtractorV4();
     // 查询得到 TableEntry 记录了指定表的分区信息
-    TableEntry entry = tableEntryExtractor.queryTableEntry(conn, key);
+    TableEntry entry = tableEntryExtractor.queryTableEntry(conn, key,subsequentV4);
 
     
     // 得到指定表的所有分区
