--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/55.grant-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/55.grant-of-mysql-mode.md
@@ -54,14 +54,14 @@ with_option:
 
 ## 参数解释
 
-|                 **参数**                 |                                                                                                                                                                                                **描述**                                                                                                                                                                                                |
-|----------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| priv_type                              | 指定授予的权限类型。具体的权限类型及其说明请参见下方权限类型说明表。 同时把多个权限赋予用户时，权限类型用","隔开。                                                                                                                                                                                                                                                                                                                          |
-| priv_level                             | 指定授予权限的层级。权限可以分为以下几个层级： *全局层级：适用于所有的数据库。使用 `GRANT ALL ON *.*` 授予全局权限。* 数据库层级：适用于一个给定数据库中的所有目标。使用 `GRANT ALL ON db_name.*` 授予数据库权限。   * 表层级：表权限适用于一个给定表中的所有列。使用 `GRANT ALL ON database_name.table_name` 授予表权限。    用"\*"代替 `table_name`，表示赋予全局权限，即对数据库中的所有表赋权。 |
-| user_specification                     | 给特定用户授予权限。如果用户不存在，可以直接创建用户。 同时给多个用户授权时，用户名以逗号（,）分隔。                                                                                                                                                                                                                                                                                                                                  |
-| user IDENTIFIED BY 'password'          | 指定密码为明文。                                                                                                                                                                                                                                                                                                                                                                                             |
-| user IDENTIFIED BY PASSWORD 'password' | 指定密码为密文。                                                                                                                                                                                                                                                                                                                                                                                             |
-| with_option                            | 是否允许转授指定权限。                                                                                                                                                                                                                                                                                                                                                                                          |
+|                 **参数**   |          **描述**        |
+|----------------------------------------|--------------------------------------|
+| priv_type                              | 指定授予的权限类型。具体的权限类型及其说明请参见下方权限类型说明表。 同时把多个权限赋予用户时，权限类型用","隔开。   |
+| priv_level                             | 指定授予权限的层级。权限可以分为以下几个层级： <ul><li>全局层级：适用于所有的数据库。使用 `GRANT ALL ON *.*` 授予全局权限。</li><li> 数据库层级：适用于一个给定数据库中的所有目标。使用 `GRANT ALL ON db_name.*` 授予数据库权限。   </li><li> 表层级：表权限适用于一个给定表中的所有列。使用 `GRANT ALL ON database_name.table_name` 授予表权限。 用"\*"代替 `table_name`，表示赋予全局权限，即对数据库中的所有表赋权。</li></ul> |
+| user_specification                     | 给特定用户授予权限。如果用户不存在，可以直接创建用户。 同时给多个用户授权时，用户名以逗号（,）分隔。       |
+| user IDENTIFIED BY 'password'          | 指定密码为明文。   |
+| user IDENTIFIED BY PASSWORD 'password' | 指定密码为密文。   |
+| with_option                            | 是否允许转授指定权限。  |
 
 可以授予的权限类型如下表所示。
 
@@ -71,18 +71,19 @@ with_option:
 | ALTER             | `ALTER TABLE` 的权限。                                                     |
 | CREATE            | `CREATE TABLE` 的权限。                                                    |
 | CREATE USER       | `CREATE USER`、`DROPUSER`、`RENAME USER` 和 `REVOKE ALL  PRIVILEGES` 的权限。 |
-| CREATE TABLEGROUP | 全局 `CREATE TABLEGROUP` 的权限。                                            |
+| CREATE VIEW       | `CREATE VIEW` 与 `DROP VIEW` 的权限。                                       |
 | DELETE            | `DELETE` 的权限。                                                          |
 | DROP              | `DROP` 的权限。                                                            |
 | GRANT OPTION      | `GRANT OPTION` 的权限。                                                    |
-| INSERT            | `INSERT` 的权限。                                                          |
-| SELECT            | `SELECT` 的权限。                                                          |
-| UPDATE            | `UPDATE` 的权限。                                                          |
-| SUPER             | `SET GLOBAL` 修改全局系统参数的权限。                                              |
-| SHOW DATABASES    | 全局 `SHOW DATABASES` 的权限。                                               |
 | INDEX             | `CREATE INDEX` 与 `DROP INDEX` 的权限。                                     |
-| CREATE VIEW       | `CREATE VIEW` 与 `DROP VIEW` 的权限。                                       |
+| INSERT            | `INSERT` 的权限。                                                          |
+| PROCESS           |  通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。|
+| SELECT            | `SELECT` 的权限。                                                          |
+| SHOW DATABASES    | 全局 `SHOW DATABASES` 的权限。                                               |
 | SHOW VIEW         | `SHOW CREATE VIEW` 权限。                                                 |
+| SUPER             | `SET GLOBAL` 修改全局系统参数的权限。                                         |
+| UPDATE            | `UPDATE` 的权限。                                                          |
+| USAGE             |  没有权限的同义词。|
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
