--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
@@ -25,10 +25,16 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num [ DELETE UNIT_GROUP = ( 
 示例
 -----------------------
 
-修改租户 `tenant1` 下所有资源池的 Unit 个数为 3。
+* 修改租户 `tenant1` 下所有资源池的 Unit 个数为 3。
 
-```sql
-obclient> ALTER RESOURCE TENANT tenant1 UNIT_NUM = 3;
-Query OK, 0 rows affected 
-```
+  ```sql
+  obclient> ALTER RESOURCE TENANT tenant1 UNIT_NUM = 3;
+  Query OK, 0 rows affected 
+  ```
 
+* 缩容场景下，删除租户 `tenant2` 下的 Unit Group 1002 和 1003。
+  
+  ```shell
+  obclient> ALTER RESOURCE TENANT tenant2 UNIT_NUM = 2 DELETE UNIT_GROUP (1002, 1003);
+  Query OK, 0 rows affected 
+  ```
