--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md
@@ -15,15 +15,22 @@
 ## 语法
 
 ```sql
-LOCK TABLE 
-  {
-  [ schema. ]  table_name 
-  [ PARTITION '('partition_name ...')' 
-  | SUBPARTITION '('subpartition_name ...')' ] 
-   ...
-  }
+LOCK TABLE [ schema. ]  table_name 
+  
+  [ partition_extension_clause]
+    [, [ schema. ] table_name
+      [ partition_extension_clause ]
+     ]...
   IN lock_mode MODE
-  [ NOWAIT  | WAIT integer] ;
+  [ NOWAIT  
+   | WAIT integer
+  ] ;
+
+partition_extension_clause:
+
+    PARTITION (partition_name, ...)
+  | SUBPARTITION (subpartition_name, ...) 
+ 
 ```
 
 ## 语法说明
