--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
@@ -17,15 +17,25 @@ OceanBase 数据库的执行计划命令有三种模式：`EXPLAIN BASIC`、`EXP
 `EXPLAIN` 命令格式如下：​​
 
 ```sql
-EXPLAIN [BASIC | EXTENDED | PARTITIONS | FORMAT = format_name] [PRETTY | PRETTY_COLOR] explainable_stmt
-format_name: 
-  { TRADITIONAL | JSON }
-explainable_stmt: 
-  { SELECT statement
- | DELETE statement
- | INSERT statement
- | REPLACE statement
- | UPDATE statement }
+EXPLAIN [INTO table_name ] [SET statement_id = string] [explain_type] [PRETTY | PRETTY_COLOR] dml_statement;
+
+explain_type：
+    BASIC 
+  | OUTLINE
+  | EXTENDED
+  | EXTENDED_NOADDR
+  | PARTITIONS 
+  | FORMAT = {TRADITIONAL| JSON}
+
+dml_statement:
+    SELECT statement 
+  | DELETE statement 
+  | INSERT statement 
+  | UPDATE statement 
+  /* 仅 Oracle 模式下支持 */
+  | MERGE statement
+  /* 仅 MySQL 模式下支持 */
+  | REPLACE statement 
 ```
 
 `EXPLAIN` 命令适用于 `SELECT`、`DELETE`、`INSERT`、`REPLACE` 和 `UPDATE` 语句，显示优化器所提供的有关语句执行计划的信息，包括如何处理该语句，如何联接表以及以何种顺序联接表等信息。
@@ -36,6 +46,8 @@ explainable_stmt:
 
 使用 `EXPLAIN PARTITITIONS` 也可用于检查涉及分区表的查询。如果检查针对非分区表的查询，则不会产生错误，但 `PARTIONS` 列的值始终为 `NULL`。
 
+特别地，用户可以使用 `INTO table_name` SQL 语句将 `EXPLAIN` 的计划信息保存到指定表内，默认查询到 `PLAN_TABLE` 表内；使用 `SET statement_id` 语句可以将当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息，默认使用空字符串作为信息标记。更多详细的信息，请参见 [EXPLAIN（MySQL 模式）](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md) 和 [EXPLAIN（Oracle 模式）](../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md)。
+
 对于复杂的执行计划，可以使用 `PRETTY` 或者 `PRETTY_COLOR` 选项将计划树中的父节点和子节点使用树线或彩色树线连接起来，使得执行计划展示更方便阅读。示例如下：
 
 ```sql
@@ -45,7 +57,7 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE p2table(c1 INT ,c2 INT) PARTITION BY HASH(c1) PARTITIONS 4;
 Query OK, 0 rows affected
 
-obclient> EXPLAIN EXTENDED PRETTY_COLOR SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2\G
+obclient> EXPLAIN EXTENDED PRETTY_COLOR SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2；
 *************************** 1. row ***************************
 Query Plan: ==========================================================
 |ID|OPERATOR                     |NAME    |EST. ROWS|COST|
@@ -206,3 +218,12 @@ Outputs & filters:
   4 - output([t1.c1], [t1.c2]), filter(nil),
       access([t1.c1], [t1.c2]), partitions(p0)
 ```
+为了更好地读懂 OceanBase 数据库 EXPLAIN 信息，请参见 [执行计划算子](2.execution-plan-operator/1.table-scan.md)。
+
+## 相关文档
+
+[EXPLAIN（MySQL 模式）](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md) 
+
+[EXPLAIN（Oracle 模式）](../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md)
+
+[执行计划算子](2.execution-plan-operator/1.table-scan.md)
