--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -58,7 +58,7 @@
 
 下面以调大租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
@@ -151,6 +151,94 @@
 ## 调小 Unit Number
 
 下面以调小租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
+
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
+
+    ```shell
+    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
+    ```
+
+2. 进入 `oceanbase` 数据库。
+
+    ```shell
+    obclient>use oceanbase;
+    ```
+
+3. 查看租户 `mq_t1` 信息，获取其 `TENANT_ID`。
+
+   ```sql
+    SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+4. 查看租户 `mq_t1` 所拥有的 Unit。
+
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+
+5. 查看租户 `mq_t1` 目前所拥有的日志流。
+
+   ```sql
+   SELECT * FROM oceanbase.CDB_OB_LS WHERE TENANT_ID = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+6. 把租户 `mq_t1` 的 `UNIT_NUM` 修改为 1。
+
+   * 通过随机删除 `UNIT_GROUP` 的方式来调小 `UNIT_NUM` 的数量。
+
+     ```sql
+     ALTER RESOURCE TENANT mq_t1 UNIT_NUM = 1;
+     ```
+
+     该语句执行后，对于每个 Zone 上 2 个 Unit 的场景，系统会随机删除一个 Unit Group。
+
+   * 通过删除指定 `UNIT_GROUP` 的方式来调小 `UNIT_NUM` 的数量
+
+     ```sql
+     ALTER RESOURCE TENANT mq_t1 UNIT_NUM = 1 DELETE UNIT_GROUP =(1004,1005,1006);
+     ```
+
+     该语句执行后，对于每个 Zone 上 2 个 Unit 的场景，系统会将指定的 Unit Group 删除。
+
+7. 查看租户 `mq_t1` 修改后的 Unit。
+
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+8. 查看租户 `mq_t1` 修改后的日志流。
+
+   ```sql
+   SELECT * FROM oceanbase.CDB_OB_LS WHERE TENANT_ID = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+通过上述示例，将租户 `mq_t1` 的 Unit Number 从 2 变更为 1。变更前租户在每个 Zone 的 Unit 个数为 1，对应的日志流个数为 1；变更后租户在每个 Zone 的 Unit 个数为 1，对应的日志流个数为 1，从而实现了租户缩容。
 
 ## 相关文档
 
