--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -40,7 +40,7 @@
 
 ## 增加 Primary Zone
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
@@ -149,3 +149,89 @@
 通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 1 变更为 2。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而对应的日志流个数变更为 4。变更后租户的服务节点从 2 扩容为 4，从而实现了租户扩容。
 
 ## 减少 Primary Zone
+
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
+
+    ```shell
+    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
+    ```
+
+2. 进入 `oceanbase` 数据库。
+
+    ```sql
+    use oceanbase;
+    ```
+
+3. 查询租户 `mq_t1` 的基本信息，例如 `locality`、`primary zone` 等属性。
+
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+4. 查询租户 `mq_t1` 的 Unit 信息，在单个 Zone 的 `unit num` 为 2。
+
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+5. 查询租户 `mq_t1` 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 2，因此日志流个数为 4。
+
+   ```sql
+   SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+6. 修改租户 `mq_t1` 的 `PRIMARY_ZONE` 属性，第一优先级 Zone 的个数从 2 调整为 1。
+
+   ```sql
+   ALTER TENANT mq_t1 PRIMARY_ZONE='sa128_obv4_1,sa128_obv4_2;sa128_obv4_3'; 
+   ```
+
+7. 查询租户 `mq_t1` 的基本信息，确认 `PRIMARY_ZONE` 属性修改成功，由 `sa128_obv4_1,sa128_obv4_2` 变更为 `sa128_obv4_1`。
+
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+8. 再次查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
+
+   ```sql
+   SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+9. 再次查询租户 `mq_t1` 的日志流信息，变更前为 2，变更后为 2。
+
+   ```sql
+   SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
+   ```
+
+   查询结果如下：
+
+   ```shell
+   ```
+
+通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 2 变更为 1。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 4；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 2 变更为 1，从而对应的日志流个数变更为 2。变更后租户的服务节点从 4 缩容为 2，从而实现了租户缩容。
