--- a/en-US/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/en-US/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -1,6 +1,8 @@
 # Limitations
 
-## Identifier length limits
+The topic provides information on the limitations of various aspects in OceanBase Database. It is essential to consider these limitations while working with OceanBase Database to achieve optimal performance and prevent any possible issues or errors.
+
+## Identifier length
 
 * MySQL mode
 
@@ -85,3 +87,20 @@
    | `VARCHAR2` | 32,767 bytes |
    | `NCHAR` | 2,000 bytes |
    | `NVARCHAR2` | 32,767 bytes |
+
+
+## Limitations on the physical standby database feature
+
+The table below shows the limitations for using the physical standby database feature.
+
+
+
+| Item                         |   Description                                |
+|------------------------------|----------------------------------------------|
+| Number of standby tenants    | Unmlimited                                   |
+| Heterogeneity between the primary and standby tenants            | <ul><li>The resource specifications (such as CPU and memory configurations) of the primary and standby tenants must be the same. Otherwise, the system stability might be compromised.</li><li>The `UNIT_NUM` configurations of the primary and standby tenants must be the same.</li></ul>   |
+| Synchronization of parameter modifications between the primary tenant and standby tenant     | Parameters of the primary tenant and standby tenant are independent and not physically synchronized. Therefore, when you modify a parameter for the primary tenant, evaluate whether the corresponding parameter for the standby tenant needs to be modified.|
+|  Synchronization of system variable modifications between the primary tenant and standby tenant	   | When modifications are made to system variables for the primary tenant, these modifications will be synchronized and applied to the corresponding system variables of the standby tenant.     |
+| Standby tenant operations                  | <ul><li>Standby tenants support strong or weak reads, but do not support writes.</li><li>Standby tenants can only trigger minor compactions, and cannot trigger major compactions. Information about major compactions is synchronized from the primary tenant.</li></ul>|
+| Switchover                | Before you switch from a standby tenant to a primary tenant, make sure that: <ul><li>All servers in the cluster where the standby tenant is located are online.</li><li>The standby tenant is synchronized.</li></ul>                        |
+| Failover                  | Before you perform failover, make sure that all servers in the cluster where the standby tenant is located are online.                                |
