--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -1,8 +1,47 @@
 # 日志归档的准备工作
 
-在开始日志归档任务前，您需要使用 `ALTER SYSTEM` 命令配置 `LOG_ARCHIVE_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置归档目的端。
+本节主要介绍日志归档前的准备工作。
+
+## 配置归档并发度（可选）
+
+开启归档模式前，您可以通过配置日志归档的并发度来提高租户的日志归档速度。
+
+1. `sys` 租户或用户租户的租户管理员登录到数据库。
+
+2. 选择合适的语句，设置配置项 `log_archive_concurrency`。
+
+   租户级配置项 `log_archive_concurrency` 用于配置日志归档总的工作线程数量。该配置项为动态生效，不需要重启 OBServer 节点。该配置项的默认值为 `1`，取值范围为 [1, 100]，当前仅支持 1 ~ 10 为有效值，即设置为小于或等于 10 的值时，以设置的值为准；当设置为大于 10 的值时，其有效取值为 10。由于线程数量增多会导致较多的内存占用，一般情况下，建议使用默认值。
+
+   <main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>对于小规模租户（内存为 2C、4C 的租户），建议使用默认值，不要调整该配置项的值。</p>
+   </main> 
+
+   设置方法如下：
+
+   * `sys` 租户调整指定租户的日志归档速度
+
+     ```sql
+     ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = mysql_tenant;
+     ```
+
+   * `sys` 租户调整所有租户的日志归档速度
+
+     ```sql
+     ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = ALL;
+     ```
+
+   * 用户租户调整本租户的日志归档速度
+
+     ```sql
+     ALTER SYSTEM SET log_archive_concurrency = 10;
+     ```
+
+   有关配置项 `log_archive_concurrency` 的更多信息，请参见 [log_archive_concurrency](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/250.log_archive_concurrency.md)。
 
 ## 配置归档目的端
+
+在开始日志归档任务前，您需要使用 `ALTER SYSTEM` 命令配置 `LOG_ARCHIVE_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置归档目的端。
 
 配置归档目的端的操作主要是设置 `LOCATION`、`PIECE_SWITCH_INRERVAL` 和 `BINDING` 属性。
 
