420 Requirement: table_alias_name

--- a/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md
@@ -108,6 +108,25 @@ obclient> SELECT empname,empno,job,mgr,hiredate,sal,comm,deptno FROM emp;
 6 rows in set
 ```
 
+### 查询时指定表别名
+
+查询表 `emp` 的数据并指定表别名为 `t`。
+
+```shell
+obclient [SYS]> SELECT t.* FROM (emp) t;
++-------+---------+----------+------+-----------+------+------+--------+------+
+| EMPNO | EMPNAME | JOB      | MGR  | HIREDATE  | SAL  | COMM | DEPTNO | AGE  |
++-------+---------+----------+------+-----------+------+------+--------+------+
+|  1369 | SMITH   | CLERK    | 1902 | 17-DEC-80 |  800 | NULL |     20 |   22 |
+|  1499 | ALLEN   | SALESMAN | 1698 | 20-FEB-81 | 1600 |  300 |     35 |   22 |
+|  1566 | JONES   | MANAGER  | 1839 | 02-APR-81 | 2975 | NULL |     40 |   22 |
+|  1698 | BLAKE   | MANAGER  | 1839 | 01-MAY-81 | 2850 | NULL |     30 |   33 |
+|  1788 | SCOTT   | ANALYST  | 1566 | 15-JUL-87 | 3000 | NULL |     25 |   33 |
+|  1902 | FORD    | ANALYST  | 1566 | 05-DEC-81 | 3000 | NULL |     45 |   22 |
++-------+---------+----------+------+-----------+------+------+--------+------+
+6 rows in set
+```
+
 ### 查询指定列
 
 ```sql
