--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -276,7 +276,7 @@
 
      该语句执行后，对于每个 Zone 上 2 个 Unit 的场景，系统会将指定的 Unit Group 删除。
 
-7. 退出会话重新连接后，查看租户 `mq_t1` 修改后的 Unit。
+7. 查看租户 `mq_t1` 修改后的 Unit。
 
    ```sql
    SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
