--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
@@ -1,31 +1,76 @@
 # 锁定查询结果 LOCK IN SHARE MODE
 
-`SELECT ... LOCK IN SHARE MODE` 语句用于在查询过程中获取共享锁。共享锁可以防止其他事务对已经锁定的记录进行修改，但是允许其他事务读取已经锁定的记录。在获取共享锁的情况下，其他事务可以共享读取锁定记录的数据，但是不能修改这些记录。
+`SELECT ... LOCK IN SHARE MODE` 是一种行级锁，用于在查询数据时获取共享锁，防止其他事务对数据进行写操作，但允许其他事务对数据进行读操作。
 
-本文将介绍如何使用 `SELECT ... LOCK IN SHARE MODE` 锁定查询结果。
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>OceanBase 数据库模拟了 <code>LOCK IN SHARE MODE</code> 共享锁语法的功能，使用写锁来实现，这样可以满足一些软件的兼容性需求，同时保证语法的正确性。然而，由于使用写锁会阻塞读操作，因此一般不建议使用该语法，特别是在性能敏感的场景中更应该避免使用。</p>
+</main>
 
-## 注意事项
-
-* `LOCK IN SHARE MODE` 只能防止其他事务修改已经锁定的记录，不能防止其他事务对锁定记录进行删除操作。如果需要防止其他事务对锁定的记录进行删除操作，应该使用排他锁 `SELECT ... FOR UPDATE`，详细信息请参见 [锁定查询结果 SELECT FOR UPDATE](10.lock-query-results-select-for-update-of-mysql-mode.md)。
-* `SELECT ... LOCK IN SHARE MODE` 会阻塞读操作。因此，在一般情况下，不建议使用该语法，更不要在性能敏感的场景中使用它。
+本文通过示例介绍如何使用 `SELECT ... LOCK IN SHARE MODE` 锁定查询结果。
 
 ## 示例
 
-例如下面的 SQL 语句，使用 `LOCK IN SHARE MODE` 语法，在表 `test_tbl1` 中对所有 `id` 值小于 `4` 的记录进行查询，并获取共享锁。
+1. 在 **会话 1** 中，执行下面 SQL 语句开启事务。
 
-```sql
-SELECT * FROM test_tbl1 WHERE id < 4 LOCK IN SHARE MODE;
-```
+    ```sql
+    START TRANSACTION;
+    ```
 
-返回结果如下：
+2. 在 **会话 1** 中，使用 `LOCK IN SHARE MODE` 语法在表 `test_tbl1` 中对 `id` 值等于 `1` 的记录进行查询，并获取共享锁。
 
-```shell
-+------+------+
-| id   | name |
-+------+------+
-|    1 | A1   |
-|    2 | A2   |
-|    3 | A3   |
-+------+------+
-3 rows in set
-```
+    ```sql
+    SELECT * FROM test_tbl1 WHERE id = 1 LOCK IN SHARE MODE;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +------+------+
+    | id   | name |
+    +------+------+
+    |    1 | A1   |
+    +------+------+
+    1 row in set
+    ```
+
+3. 在 **会话 2** 中，执行下面 SQL 语句开启事务。
+
+    ```sql
+    START TRANSACTION;
+    ```
+
+4. 在 **会话 2** 中，执行下面 SQL 语句在表 `test_tbl1` 中 `id` 值等于 `1` 的行对应的 name 的改为 'A1A1A1'。该 SQL 语句会等待，直到 **会话 1** 的事务回滚或者 `COMMIT` 才得到执行。
+
+    ```sql
+    UPDATE test_tbl1 SET name = 'A1A1A1' WHERE id = 1;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    ERROR 1205 (HY000): Lock wait timeout exceeded; try restarting transaction
+    ```
+
+5. 在 **会话 1** 中，执行下面 SQL 语句提交事务。
+
+    ```sql
+    COMMIT;
+    ```
+
+6. 在 **会话 2** 中，再次执行 **步骤 4** 的更新语句。
+
+    ```sql
+    UPDATE test_tbl1 SET name = 'A1A1A1' WHERE id = 1;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    Query OK, 1 row affected
+    Rows matched: 1  Changed: 1  Warnings: 0
+    ```
+
+## 相关文档
+
+[SELECT](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)
